--- a/config/pom.xml
+++ b/config/pom.xml
@@ -16,11 +16,11 @@
             <artifactId>spring-webmvc</artifactId>
             <version>4.2.6.RELEASE</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
-            <version>1.9.0.RELEASE</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.data</groupId>-->
+            <!--<artifactId>spring-data-jpa</artifactId>-->
+            <!--<version>1.9.0.RELEASE</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 
