--- a/pom.xml
+++ b/pom.xml
@@ -24,18 +24,65 @@
     <!--<java.version>1.8</java.version>-->
     <!--<properties/>-->
 
+    <!--<dependencies>-->
+    <!--&lt;!&ndash; Spring Context &ndash;&gt;-->
+    <!--<dependency>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-context</artifactId>-->
+        <!--<version>4.3.7.RELEASE</version>-->
+    <!--</dependency>-->
+
+    <!--&lt;!&ndash; Spring ORM &ndash;&gt;-->
+    <!--<dependency>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-orm</artifactId>-->
+        <!--<version>4.3.7.RELEASE</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash; Mysql Connector &ndash;&gt;-->
+    <!--<dependency>-->
+        <!--<groupId>mysql</groupId>-->
+        <!--<artifactId>mysql-connector-java</artifactId>-->
+        <!--<version>6.0.5</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash; Hibernate 5.2.9 Final &ndash;&gt;-->
+    <!--<dependency>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate-core</artifactId>-->
+        <!--<version>5.2.9.Final</version>-->
+    <!--</dependency>-->
+    <!--&lt;!&ndash; Apache Commons DBCP &ndash;&gt;-->
+    <!--<dependency>-->
+        <!--<groupId>org.apache.commons</groupId>-->
+        <!--<artifactId>commons-dbcp2</artifactId>-->
+        <!--<version>2.1.1</version>-->
+    <!--</dependency>-->
+
+        <!--&lt;!&ndash;JpaRepository<Object, Id></Object>&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.data</groupId>-->
+            <!--<artifactId>spring-data-jpa</artifactId>-->
+            <!--<version>1.9.0.RELEASE</version>-->
+        <!--</dependency>-->
+
+        <!--&lt;!&ndash;BoneCp &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--<groupId>com.jolbox</groupId>-->
+        <!--<artifactId>bonecp</artifactId>-->
+        <!--<version>0.8.0.RELEASE</version>-->
+        <!--</dependency>-->
+<!--</dependencies>-->
 
     <dependencies>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.servlet</groupId>-->
+            <!--<artifactId>javax.servlet-api</artifactId>-->
+            <!--<version>3.1.0</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-web</artifactId>-->
+        <!--</dependency>-->
 
         <!-- BoneCP -->
 
@@ -50,7 +97,14 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.30</version>
+            <version>6.0.6</version>
+        </dependency>
+
+         <!--https://mvnrepository.com/artifact/org.springframework/spring-orm-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>3.1.1.RELEASE</version>
         </dependency>
 
 
@@ -59,10 +113,42 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.2.0.Final</version>
         </dependency>
+
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>5.2.0.Final</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.9.0.RELEASE</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+
+        <!--<dependency>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-core</artifactId>-->
+            <!--<version>5.1.0.Final</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-validator</artifactId>-->
+            <!--<version>5.2.4.Final</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+
+
+        <!--To enable JPA in a Spring Boot application, we need the spring-boot-starter and spring-boot-starter-data-jpa dependencies-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>1.5.6.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>1.5.6.RELEASE</version>
         </dependency>
     </dependencies>
 
