--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,29 @@
                 </property>
             </activation>
             <build>
+                <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.3</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals><goal>copy</goal></goals>
+                            <configuration>
+                                <artifactItems>
+                                    <artifactItem>
+                                        <groupId>com.github.jsimone</groupId>
+                                        <artifactId>webapp-runner</artifactId>
+                                        <version>8.5.11.3</version>
+                                        <destFileName>webapp-runner.jar</destFileName>
+                                    </artifactItem>
+                                </artifactItems>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                </plugins>
                 <!--<plugins>-->
                     <!--<plugin>-->
                         <!--&lt;!&ndash; https://mvnrepository.com/artifact/com.heroku.sdk/heroku-maven-plugin &ndash;&gt;-->
